--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -310,10 +310,17 @@
                 newMarker.setMap(map); 
                 return newMarker;
                 }
-            function closeAllInfoWindows() {
-                openInfoWindows.forEach(iw => iw.close());  
-                openInfoWindows = []; 
-            }
+                function closeAllInfoWindows() {
+                    openInfoWindows.forEach(iw => {
+                        if (iw instanceof kakao.maps.InfoWindow) {
+                            iw.close(); 
+                        } else if (iw instanceof kakao.maps.CustomOverlay) {
+                            iw.setMap(null);  
+                        }
+                    });
+                    openInfoWindows = []; 
+                }
+
             function removeMarker() {
                 markers.forEach(marker => marker.setMap(null));
                 markers = []; 
@@ -389,7 +396,8 @@
                         '장애인전용주차구역보유여부': place['disabled_parking'],
                         '소재지지번주소': place['lot_address'],
                         '남은자리': parseInt(place['available_spots']),
-                        '별점평균': parseFloat(place['average_rating']).toFixed(2) 
+                        '별점평균': parseFloat(place['average_rating']).toFixed(2),
+                        '전체자리': parseInt(place[''])
                     });
                 }); 
 
