--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -1,6 +1,14 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
+    <div class="click">
+        <div class="star">
+            <i class="ri-bard-fill"></i>
+        </div>
+        <div class="me">
+            <p><i class="ri-cursor-fill"></i>click me!</p>
+        </div>
+    </div>
     <div class="mypage-container">
         <div class="mypage_container">
             <div class="mypage-h1"><h1>MY PAGE</h1></div>
