주차장리스트 오른쪽 상단 기능 수정

--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -779,7 +779,8 @@
                     }
                     else{
                     showClosestParkingLots();
-                    document.getElementById('parkingListWrap').style.display = "block"; 
+                    document.getElementById('list-btn').style.display = "block";
+                    document.getElementById('parkingListWrap').style.display = "none"; 
                     document.getElementById('parkingDetailWrap').style.display = "none";
                 } }); 
                 loadReviews(); 
