--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -165,6 +165,37 @@
 
                 ps.keywordSearch(keyword, placesSearchCB); 
             }
+            function sortPlacesByDistance(userLatLng, places) {
+                // 장소 목록에 각 장소까지의 거리 추가
+                var sortedPlaces = places.map(place => {
+                    var placeLatLng = new kakao.maps.LatLng(place.y, place.x);
+                    var distance = getDistance(userLatLng, placeLatLng);
+                    return { ...place, distance };
+                });
+
+                // 거리 기준으로 오름차순 정렬
+                sortedPlaces.sort((a, b) => a.distance - b.distance);
+
+                return sortedPlaces;
+            }
+
+            function getUserLocationAndSortPlaces(places) {
+                if (navigator.geolocation) {
+                    navigator.geolocation.getCurrentPosition(function (position) {
+                        var userLatLng = new kakao.maps.LatLng(position.coords.latitude, position.coords.longitude);
+
+                        var sortedPlaces = sortPlacesByDistance(userLatLng, places);
+
+                        displayPlaces(sortedPlaces); 
+                    }, function (error) {
+                        console.error("위치 정보를 가져올 수 없습니다.", error);
+                        displayPlaces(places); 
+                    });
+                } else {
+                    console.error("이 브라우저에서는 Geolocation을 지원하지 않습니다.");
+                    displayPlaces(places); 
+                }
+            }
 
             function placesSearchCB(data, status, pagination) {
                 if (status === kakao.maps.services.Status.OK) {
@@ -178,7 +209,7 @@
                     document.getElementById('parkingListWrap').style.display = "none";
                     document.getElementById('parkingDetailWrap').style.display = "none";
                     document.getElementById('list-btn').style.display = "block";
-                    displayPlaces(data); 
+                    getUserLocationAndSortPlaces(data);
                     displayPagination(pagination); 
                 } else if (status === kakao.maps.services.Status.ZERO_RESULT) {
                     alert('검색 결과가 존재하지 않습니다.');
@@ -416,7 +447,7 @@
                         data.forEach(function(realTimeInfo) {
                             const parking = parkingData.find(p => p['소재지지번주소'] === realTimeInfo['lot_address']);
                             if (parking) {
-                               parking['남은자리'] = isNaN(Number(realTimeInfo['available_spots'])) ? 0 : Number(realTimeInfo['available_spots']);
+                                parking['남은자리'] = isNaN(Number(realTimeInfo['available_spots'])) ? 0 : Number(realTimeInfo['available_spots']);
                                 if (parking['남은자리'] > 0) {
                                     console.log(`주소: ${parking['소재지지번주소']}, 주차장: ${parking['주차장명']}, 남은자리: ${parking['남은자리']}`);
                                 }
