--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -231,6 +231,7 @@
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 4px;
+    font-size: 1.6rem;
 }
 .review input, .review textarea{
     width: 60%;
@@ -264,9 +265,11 @@
     padding-block: 5px;
     border: 1px solid #5F5F5F;
     border-radius: 4px;
+    font-size: 1.6rem;
 }
 .input-qna input {
     width: 80%;
+    font-size: 1.6rem;
 }
 .review-item {
     margin: 1rem;
@@ -296,6 +299,7 @@
     border: none;
     border-bottom: 1px solid #789;
     text-align: center;
+    font-size: 1.6rem;
 }
 .adjust{
     background-color: #e9e9e9;
