--- a/templates/base.html
+++ b/templates/base.html
@@ -32,25 +32,57 @@
             </div>
         </header>
         <main>
-            <div id="menu" class="menu">
-                <a href="{% url 'demos:home' %}" >Home</a>
-                <a href="{% url 'demos:introduce' %}">Service</a>
-                <a href="{% url 'demos:aboutus' %}">About Us</a>
-                <a href="{% url 'demos:guidemap' %}">Guide Map</a>
-                <a href="{% url 'demos:qna' %}">Q&A</a>
-            </div>
-            {% block content %}
-            {% endblock %}
+          <div id="menu" class="menu">
+              <a href="{% url 'demos:home' %}">Home</a>
+              <a href="{% url 'demos:introduce' %}">Service</a>
+              <a href="{% url 'demos:aboutus' %}">About Us</a>
+              <a href="{% url 'demos:guidemap' %}">Guide Map</a>
+              <a href="{% url 'demos:qna' %}">Q&A</a>
+          </div>
+          <div id="overlay" onclick="toggleMenu()"></div>
+      
+          {% block content %}
+          {% endblock %}
         </main>
+      
+        <style>
+          #overlay {
+            position: fixed;
+            top: 0;
+            right: 0;
+            width: 100%;
+            height: 100vh;
+            background: white;
+            z-index: 998;
+            display: none;
+          }
+          #overlay.active {
+              display: block;
+          }
+          #menu {
+              background: white;
+          }
+          body.fixed {
+              overflow: hidden;
+              height: 100vh;
+              position: fixed;
+              width: 100%;
+          }
+        </style>
         {% block footer %}
         {% endblock %}
     </div>
     <script>
-        function toggleMenu() {
-          const menu = document.getElementById('menu');
-          menu.classList.toggle('active');
-        }
-      </script>
+      function toggleMenu() {
+        const menu = document.getElementById('menu');
+        const overlay = document.getElementById('overlay');
+        const body = document.body;
+    
+        menu.classList.toggle('active');
+        overlay.classList.toggle('active');
+        body.classList.toggle('fixed');
+      }
+    </script>
       {% block scripts %}{% endblock %}
   </body>
 </html>
