--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -95,8 +95,8 @@
     position: relative;
     z-index: 1;
     left: 6px;
-    bottom: 470px;
-    height: 50%;
+    bottom: 363px;
+    height: 329px;
     overflow-y: auto;
     background:rgba(255, 255, 255, 0.9);
     padding: 20px 30px;
