--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -8,7 +8,14 @@
     width:100%;
     height:94%;
 }
+.form-top{
+    width:100%;
+}
 .option{
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+    justify-content: center;
     width: 100%;
     height: 5%;
     padding:7px;
