--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content %}
         <div class="option">
-            <form onsubmit="searchPlaces(); return false;">
+            <form class="form-top" onsubmit="searchPlaces(); return false;">
                     <input type="text" value=" " id="keyword" size="15"> 
                     <button type="submit" class="search-button">검색</button>
                     <i id="location-btn" class="ri-crosshair-2-line" style="font-size: 20px;
