--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -430,7 +430,7 @@
                         '주차장유형': place['type'],
                         '장애인전용주차구역보유여부': place['disabled_parking'],
                         '소재지지번주소': place['lot_address'],
-                        '남은자리': isNaN(parseInt(place['available_spots'])) ? 0 : parseInt(place['available_spots']),
+                        '남은자리': isNaN(parseInt(place['available_spots'])) ? null : parseInt(place['available_spots']),
                         '별점평균': parseFloat(place['average_rating']).toFixed(2),
                         '전체자리': parseInt(place[''])
                     });
