--- a/static/css/style-lyj.css
+++ b/static/css/style-lyj.css
@@ -123,6 +123,7 @@ p{
     border-radius: 0.6rem;
     margin-top: 1rem;
     color: black;
+    font-size: 1.4rem;
 }
 .signup_container, .login_container{
     display: flex;
@@ -642,3 +643,17 @@ h6 {
 .ri-parking-box-fill, .ri-user-fill{
     color: var(—icon);
 }
+
+@keyframes slide-in {
+    0% { transform: translateX(100%); }
+    100% { transform: translateX(0); }
+}
+@keyframes slide-out {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(100%); }
+}
+
+.slide-in {
+    animation: slide-in 0.5s ease-in-out forwards;
+}
+
