--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -3,7 +3,10 @@
 {% block content %}
     <div class="mypage-container">
         <div class="mypage_container">
-            <div class="mypage-h1"><h1>MY PAGE</h1></div>
+            <div class="mypage-h1">
+                <h1>MY PAGE</h1>
+                <a href="{% url 'demos:introduce' %}"><i class="ri-user-settings-line"></i></a>
+            </div>
             <div class="profile">
                 <div class="profile_img">
                     <img src="{% static 'img/profile.png' %}">
