--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -451,7 +451,8 @@
                         data.forEach(function(realTimeInfo) {
                             const parking = parkingData.find(p => p['소재지지번주소'] === realTimeInfo['lot_address']);
                             if (parking) {
-                                parking['남은자리'] = isNaN(Number(realTimeInfo['available_spots'])) ? 0 : Number(realTimeInfo['available_spots']);
+                                console.log(realTimeInfo['available_spots'])
+                                parking['남은자리'] = realTimeInfo['available_spots'] === null ? null : Number(realTimeInfo['available_spots']);
                                 if (parking['남은자리'] > 0) {
                                     console.log(`주소: ${parking['소재지지번주소']}, 주차장: ${parking['주차장명']}, 남은자리: ${parking['남은자리']}`);
                                 }
