--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -436,11 +436,11 @@
                         '소재지지번주소': place['lot_address'],
                         '남은자리': isNaN(parseInt(place['available_spots'])) ? null : parseInt(place['available_spots']),
                         '별점평균': parseFloat(place['average_rating']).toFixed(2),
-                        '전체자리': parseInt(place[''])
+                        '전체자리': parseInt(place['capacity'])
                     });
                 }); 
 
-                //updateParkingDisplay();
+                updateParkingDisplay();
             }
 
             // 실시간 데이터 갱신
