--- a/templates/account/mysetting.html
+++ b/templates/account/mysetting.html
@@ -11,7 +11,7 @@
           <button type="submit" class="setting_btn">프로필 수정</button>
             <hr>
         </form>
-        <a href="{% url 'account_login'%}" class="delete_btn">계정 삭제</a> <!--url바꿔야대-->
+        <a href="{% url 'account_signup'%}" class="delete_btn">계정 삭제</a> <!--url바꿔야대-->
     </div>
   </div>
   {% endblock %}
