--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -5,7 +5,7 @@
         <div class="mypage_container">
             <div class="mypage-h1">
                 <h1>MY PAGE</h1>
-                <a href="{% url 'demos:introduce' %}"><i class="ri-user-settings-line"></i></a>
+                <a href="{% url 'demos:mypage_detail' user.id %}"><i class="ri-user-settings-line"></i></a>
             </div>
             <div class="profile">
                 <div class="profile_img">
