fix: padding 삭제

--- a/static/css/style-lyj.css
+++ b/static/css/style-lyj.css
@@ -131,11 +131,11 @@ p{
     justify-content: center;
     align-items: center;
     background-color: white;
-    padding: 30px 40px;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 80%;
+    max-height: 80%;
     text-align: center;
 }
 .introduce_container, .setting_container{
