--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -163,3 +163,8 @@ input[type="number"]::-webkit-outer-spin-button {
 input:focus {
   outline: none;
 }
+* {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
