--- a/static/css/style-lyj.css
+++ b/static/css/style-lyj.css
@@ -217,7 +217,6 @@ input, textarea {
     margin-block: 0.5rem;
 }
 .login-btn, .signup-btn{
-    margin-top: 1rem;
     padding: 10px 15px;
     font-size: 16px;
     background-color: #8BE0F1;
@@ -240,6 +239,9 @@ input, textarea {
     height: 40px;
     border-radius: 50%;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1);
+}
+.social-login button {
+    border-radius: 50%;
 }
 .login-add {
     display:flex;
