전화번호, 운영시간 디테일에 추가

--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -334,7 +334,7 @@
 #parkingInfo1{
     color: #789;
 }
-#parkingInfo2, #parkingInfo3, #parkingInfo4{
+#parkingInfo2, #parkingInfo3, #parkingInfo4, #parkingInfo5, #parkingInfo6, #parkingInfo7, #parkingInfo8{
     color: black;
     font-size: 1.5rem;
     display: flex;
